# RoboVerse

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.md  Dockerfile  pyproject.toml  pyproject_dep.toml
.github/workflows/: premerge-ci.yml  priv-ci-trigger.yml
docs/source/roboverse_learn/: index.md
generation/: README.md  asset_converter.py  download_asset.py  enums.py  load_asset.py
generation/tests/: test_asset_converter.py
get_started/: 0_static_scene.py  12_domain_randomization.py  14_real_assets.py  15_gs_background.py  16_embodiedgen_layout.py  3_parallel_envs.py
get_started/dexhands/: 1_diff_dex_hand.py
get_started/obj_layout/: object_layout.py
get_started/rerun/: README.md  replay_task_demo.py  rerun_demo.py  save_trajectory.py  save_trajectory_simple.py
get_started/rl/: 0_ppo.py  0_ppo_gym_style.py
metasim/queries/: __init__.py  contact_force.py
metasim/randomization/: __init__.py  base.py  camera_randomizer.py  dr_manager.py  light_randomizer.py  material_randomizer.py  object_randomizer.py  scene_randomizer.py
metasim/randomization/core/: __init__.py  isaacsim_adapter.py  object_registry.py
metasim/randomization/presets/: __init__.py  camera_presets.py  light_presets.py  material_presets.py  scene_presets.py
metasim/scenario/: grounds.py  objects.py  robot.py  scenario.py  scene.py
metasim/sim/: base.py  hybrid.py  parallel.py
metasim/sim/genesis/: genesis.py
metasim/sim/isaacgym/: isaacgym.py
metasim/sim/isaacsim/: isaacsim.py
metasim/sim/mujoco/: mujoco.py
metasim/sim/pybullet/: pybullet.py
metasim/sim/sapien/: sapien2.py  sapien3.py
metasim/task/: __init__.py  base.py  gym_registration.py  registry.py  rl_task.py
metasim/test/: test_utils.py
metasim/test/queries/: README.md  __init__.py  conftest.py  test_contact_force.py  test_site.py
metasim/test/randomization/: README.md  __init__.py  conftest.py  test_camera_randomizer.py  test_light_randomizer.py  test_material_randomizer.py  test_object_randomizer.py  test_scene_randomizer.py
metasim/test/sim/: test_gravity.py  test_init_pose.py  test_kinemetics.py  test_state_consistency.py
metasim/test/test_scenario_cfg/: conftest.py  test_1_robot.py  test_2_robots.py
metasim/utils/: control_util.py  gs_util.py  hf_util.py  humanoid_robot_util.py  math.py  obs_utils.py  setup_util.py  state.py  tensor_util.py  terrain_utils.py  viz_handler_wrapper.py  viz_task_wrapper.py
metasim/utils/demo_util/: demo_util_v2.py
metasim/utils/rerun/: README.md  __init__.py  rerun_env_wrapper.py  rerun_util.py
metasim/utils/viser/: viser_env_wrapper.py
roboverse_learn/il/: README.md  collect_demo.sh  data2zarr_dp.py  data2zarr_dp_multitask.py  data2zarr_dp_multitask_deprecated.py  il_run.sh  il_setup.sh  train.py
roboverse_learn/il/act/: README.md  act_eval_runner.py  act_run.sh  ckpt_dir_path.txt  scripted_policy.py  train.py  utils.py
roboverse_learn/il/base/: base_dataset.py  base_eval_runner.py  base_model.py
roboverse_learn/il/configs/: default_runner.yaml  dp_runner.yaml
roboverse_learn/il/datasets/: base_dataset.py  robot_image_dataset.py
roboverse_learn/il/dp/: README.md  distill.py  dp_run.sh  requirements.txt
roboverse_learn/il/eval_runner/: dp_eval_runner.py
roboverse_learn/il/fm/: README.md
roboverse_learn/il/multi-task/: append_task_config.py
roboverse_learn/il/policies/: base_image_policy.py
roboverse_learn/il/runner/: dp_runner.py
roboverse_learn/il/runners/: base_eval_runner.py  base_runner.py  default_eval_runner.py  default_runner.py
roboverse_learn/il/utils/: eval_args.py  eval_runner_getter.py  flow_matchers.py  normalize_util.py  normalizer.py  sampler.py
roboverse_learn/il/vita/: README.md  requirements.txt
roboverse_learn/rl/clean_rl/: ppo.py  sac.py  td3.py
roboverse_learn/rl/configs/: __init__.py  fast_td3.py
roboverse_learn/rl/fast_td3/: README.md  evaluate.py  evaluate_lift.py  replay_lift_states.py  train.py
roboverse_learn/rl/rsl_rl/: README.md  env_wrapper.py  eval.py  eval_tracking.py  ppo.py  ppo_tracking.py
roboverse_learn/rl/unitree_rl/: main.py
roboverse_learn/vla/OpenVLA/: vla_eval.py
roboverse_learn/vla/SmolVLA/: smolvla_eval.py
roboverse_learn/vla/pi0/: README.md  config_snippet.py  pi_eval.py  train_config_snippet.py  train_pi0.sh
roboverse_pack/asset/: download_table785_assets.py  table785_config.py  table_display.py
roboverse_pack/callback_funcs/: __init__.py
roboverse_pack/callback_funcs/humanoid/: reset_funcs.py  reward_funcs.py  step_funcs.py  termination_funcs.py
roboverse_pack/grounds/: __init__.py  gap_cfg.py  obstacle_cfg.py  pit_cfg.py  slope_cfg.py  stair_cfg.py  stone_cfg.py
roboverse_pack/queries/: lidar.py
roboverse_pack/randomization/: humanoid.py
roboverse_pack/robots/: __init__.py  agibot_a2_cfg.py  allegrohand_cfg.py  ant_cfg.py  anymal_cfg.py  brainco_hand_left_cfg.py  brainco_hand_right_cfg.py  cartpole_cfg.py  g1_cfg.py  g1_tracking.py  gen3_cfg.py  go2_cfg.py  inspire_hand_left_cfg.py  inspire_hand_right_cfg.py  psihand_left_cfg.py  psihand_right_cfg.py  robot.py  robot_template.py  vega_cfg.py  xhand_cfg.py  z1_cfg.py
roboverse_pack/scenes/: __init__.py  base_scene_cfg.py  kujiale_scene_0022_cfg.py  libero_kitchen_tabletop_cfg.py  manycore_scene_827313_cfg.py  tapwater_scene_131_cfg.py  tapwater_scene_138_cfg.py  tapwater_scene_144_cfg.py  tapwater_scene_152_cfg.py  tapwater_scene_155_cfg.py
roboverse_pack/tasks/: task_template.py
roboverse_pack/tasks/beyondmimic/: __init__.py
roboverse_pack/tasks/calvin/: INSTRUCTION.md  base_table.py  replay_all.py  scene_A.py  scene_B.py  scene_C.py  scene_D.py
roboverse_pack/tasks/embodiedgen/: put_banana.py
roboverse_pack/utils/: curriculum_utils.py  humanoid_utils.py
scripts/: distill_box.sh  run_box.sh  run_box_multitask.sh  train_box.sh  train_box_multitask.sh
scripts/advanced/: collect_demo.py  collect_demo_utils.py  replay_demo.py  replay_real_asset.py  replay_state.py  teleop_keyboard.py  teleop_phone_lerobot.py
scripts/unitree_deploy/: __init__.py  config.py  deploy_real.py  utils.py
(+336 files in other folders)
