[project]
name = "roboverse-py"
version = "0.1.17"
requires-python = ">=3.8"
dependencies = [
    "gymnasium",
    "huggingface-hub",
    "imageio[ffmpeg]",
    "loguru",
    "opencv-python",
    "pytest",
    "rich",
    "rootutils",
    "torch",
    "torchvision",
    "tqdm",
    "tyro",
    "portalocker",
    "dataclasses-json",
    "trimesh",
    "scipy",
    "numpy-quaternion"
]

[project.optional-dependencies]
isaacsim = [
    "torch==2.7.0+cu128",
    "torchvision==0.22.0+cu128",
    "isaacsim[all,extscache]==5.0.0",
]
isaacgym = [
    "numpy<2",
    "fsspec<=2025.3.0",  # fsspec==2025.3.1 has bug with python 3.8
]
mujoco = ["mujoco", "dm-control"]
mjx = ["torch==2.7.0", "mujoco-mjx>=3.2.7", "dm-control", "jax[cuda]==0.6.0"]
sapien2 = ["mani-skill2 @ git+https://github.com/haosulab/ManiSkill.git@v0.5.3"]
sapien3 = ["sapien>=3.0.0.b1"]
pybullet = ["numpy<2", "pybullet"]
genesis = [
    "genesis-world",
    "libigl==2.5.1",  # for genesis 0.2.1, see https://github.com/Genesis-Embodied-AI/Genesis/issues/1156#issuecomment-3069006079
    "open3d",

]
robosplatter = [
   "robo-splatter @ git+https://github.com/HorizonRobotics/RoboSplatter.git",
   "pyquaternion",
   "setuptools==59.5.0"

]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.pip]
index-url = "https://download.pytorch.org/whl/cu128"
extra-index-url = [
    "https://pypi.org/simple",
    "https://pypi.nvidia.com",
]

[tool.ruff]
line-length = 120
format.preview = true
lint.preview = false
target-version = "py38"
lint.select = [
    "B",    # flake8: bugbear
    "E",    # pycodestyle
    "F",    # pyflakes
    "FA",   # flake8: future annotations
    "I",    # isort
    "PLC",  # pylint
    "PLE",  # pylint
    "PLW",  # pylint
    "UP",   # pyupgrade
    "NPY",  # numpy-specific rules
    "RUF",  # ruff-defined rules
    "T20",  # flake8: check prints
    "D",    # pydocstyle
]
lint.ignore = [
    "B007",  # allow used loop control variable without leading underscore
    "D100",  # allow no docstrings in public module
    "D105",  # allow magic methods without docstring
    "D107",  # allow __init__ without docstring
    "E266",  # allow multiple leading # in comments
    "E402",  # allow imports not at the top of the file
    "E501",  # allow long lines
    "E722",  # allow bare except
    "F403",  # allow `from module import *`
    "F841",  # allow unused variable
    "PLC0206",  # allow directly iterating over a dict
    "PLC0415",  # allow imports not at the top of the file
    "PLC1901",  # allow `if some_string == ""`
    "PLW1514",  # allow open without encoding argument
    "PLW2901",  # allow for loop variable overwriting
    "PLW0602", "PLW0603", "PLW0604",  # allow global variables, TODO: add docstring and remove this
    "UP031",  # allow `%` to be used to format strings
    "NPY002",  # allow legacy `numpy.random` functions
    "RUF003",  # allow ambiguous characters in comments
    "RUF005",  # allow using `+` to concatenate collections
    "RUF009",  # allow function calls in dataclass default values
    "RUF012",  # allow mutable class attributes
    "RUF059",  # allow unused variable
    "PLE0604", # allow __all__ to be nested but still all elements are strings
]
extend-exclude = [
    "roboverse_learn",
    "wandb",
    "third_party",
    "tmp",
    "roboverse_data",
    "assets",
    "docker"
]

[tool.setuptools]
packages = ["metasim", "roboverse_pack"]

[tool.ruff.lint.per-file-ignores]
"metasim/sim/isaaclab/**.py" = ["D", "FA"]  # since isaaclab only supports Python 3.10; FIXME: Feishi remove D
## For normal scripts, allow print statements, allow no docstrings
"scripts/**.py" = ["T20", "D"]
"metasim/scripts/_private/**.py" = ["T20", "D"]
"metasim/scripts/RL/**.py" = ["T20", "D"]
"metasim/scripts/gpt_gen.py" = ["T20", "D"]
"roboverse_pack/tasks/open6dor/utils/**.py" = ["T20", "D"]
"roboverse_pack/tasks/maniskill/utils/**.py" = ["T20", "D"]
## For long-term-support scripts, allow no docstrings
"metasim/scripts/**.py" = ["D"]
## For get_started scripts, allow no docstrings
"get_started/**.py" = ["D"]
## For unit test, allow no docstrings
"metasim/test/**.py" = ["D"]
## For special tasks, allow no docstrings
"roboverse_pack/tasks/maniskill/{pick_single_egad,pick_single_ycb,peg_insertion_side}.py" = ["D"]
"roboverse_pack/tasks/open6dor/task/**.py" = ["D"]
## For python files in docs and dashboard folder, allow no docstrings
"docs/**.py" = ["D"]
"dashboard/**.py" = ["D"]
## For tasks, allow no docstrings in public modules
"roboverse_pack/tasks/**/*.py" = ["D100"]
## For roboverse_learn, allow no docstrings, allow print
"roboverse_learn/**.py" = ["D", "T20"]
## Temporary disable linting for quick testing
"roboverse_pack/robots/**.py" = ["D"]  # FIXME: whoever in charge of the robot add docstring and remove this
"roboverse_pack/scenes/**.py" = ["D"]  # FIXME: Charlie add docstring and remove this
"roboverse_pack/tasks/arnold/**.py" = ["D"]  # FIXME: Steven add docstring and remove this
"roboverse_pack/tasks/calvin/**.py" = ["D"]  # FIXME: Feishi add docstring and remove this
"roboverse_pack/tasks/debug/**.py" = ["D"]  # FIXME: Feishi add docstring and remove this
"roboverse_pack/tasks/dmcontrol/**.py" = ["D"]  # FIXME: Charlie add docstring and remove this
"roboverse_pack/tasks/fetch/**.py" = ["D"]  # FIXME: Haoran add docstring and remove this
"roboverse_pack/tasks/gapartnet/**.py" = ["D"]  # FIXME: Haoran add docstring and remove this
"roboverse_pack/tasks/isaacgym_envs/**.py" = ["D"]  # FIXME: Charlie add docstring and remove this
"roboverse_pack/tasks/libero/**.py" = ["D"]  # FIXME: Peihao add docstring and remove this
"roboverse_pack/tasks/open6dor/**.py" = ["D"]  # FIXME: Haoran and Yufei add docstring and remove this
"roboverse_pack/tasks/rlbench/**.py" = ["D"]  # FIXME: Feishi add docstring and remove this
"roboverse_pack/tasks/robosuite/**.py" = ["D"]  # FIXME: Jiangran add docstring and remove this
"roboverse_pack/tasks/simpler_env/**.py" = ["D"]  # FIXME: Boshi add docstring and remove this
"roboverse_pack/tasks/skillblender/**.py" = ["D"]  # FIXME: Haoran add docstring and remove this
"roboverse_pack/tasks/metaworld/**.py" = ["D"]  # FIXME: Siheng add docstring and remove this
"metasim/sim/**.py" = ["D"]
"metasim/utils/teleop_utils.py" = ["D"]  # FIXME: Chaoyi add docstring and remove this

[tool.ruff.lint.isort]
known-first-party = ["metasim", "scripts"]
known-third-party = ["wandb", "isaacsim"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["metasim/test"]
